# vulxels

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
include/vulxels/: app.h  log.h  types.h  version.h
include/vulxels/gfx/: buffer.h  descriptors.h  device.h  instance.h  pipeline.h  queue.h  renderer.h  shader.h  swapchain.h  window.h
shaders/: simple.frag  simple.vert
src/: app.cpp  main.cpp
src/gfx/: buffer.cpp  descriptors.cpp  device.cpp  instance.cpp  pipeline.cpp  queue.cpp  renderer.cpp  shader.cpp  swapchain.cpp  window.cpp
